Removed debugging stuff