@@ -131,12 +131,11 @@ application {
 	mainClass = mainClassName
 	applicationDefaultJvmArgs = [
 			"-server",
-			"-XX:+UseG1GC",
+			"-XX:+UseZGC",
 			"-XX:+PrintCommandLineFlags",
 			"-XX:MinHeapSize=" + 10 * 1024 * 1024,
 			"-XX:MaxRAMPercentage=80.0",
-			"-XX:+UseCompressedOops",
-			"-Xlog:gc*=debug:file=/var/log/proxy-gc.log"
+			"-XX:+UseCompressedOops"
 	]
 }
 
